--- a/index.css
+++ b/index.css
@@ -10,4 +10,33 @@ body{
     height: 100%;
     width: 30%;
     background-color: #212529;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+}
+
+.container-img{
+    height: 15%;
+    width: 25%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-img img{
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+}
+
+.container-contato{
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #E9ECEF;
+    padding: 10px;
+    font-size: small;
 }
